ie&ff sliding visibility fixed

--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,7 @@ display: block;
 
 .interest {
   padding-top: 51px;
-  width: 460px;
+  width: 480px;
   min-height: 154px;
   z-index: 2;
   background-color: #ffffff;
